done work with show hide + new login page done by not me

--- a/Flip_but.html
+++ b/Flip_but.html
@@ -8,11 +8,16 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="flip.css">
     <style type="text/css"> 
-    a { 
-        font-size: 120%; 
-        font-family: Verdana, Arial, Helvetica, sans-serif; 
-        color: #ffffff;
-       }</style>
+        a { 
+            font-size: 120%; 
+            font-family: Verdana, Arial, Helvetica, sans-serif; 
+            color: #ffffff;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
     <section><p><a href="html ideas start.html">Назад</a></p></section>
