--- a/Hide_pass.html
+++ b/Hide_pass.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" type= "text/css" href="hide.css">
     <style type="text/css"> 
         a { 
+            display: flex;
             font-size: 120%; 
             font-family: Verdana, Arial, Helvetica, sans-serif; 
-            color: #ffffff;
+            color: #000000;
+            margin: 10px;
+            top: 20px;
         }
     </style>
 </head>
@@ -19,10 +22,25 @@
             <a href="html ideas start.html">Назад</a>
         </p>
     </section>
-     <section>
+    <br>
+     <section class="Main">
          <div class="inputBox">
             <input type="password" name="" placeholder="Enter Password" id="password">
-            <div id="toggle"></div>
+            <div id="toggle" onclick="showHide();"></div>
+            <script type="text/javascript">
+                const password = document.getElementById("password");
+                const toggle = document.getElementById("toggle");
+                function showHide(){
+                    if (password.type === "password"){
+                        password.setAttribute("type", "text");
+                        toggle.classList.add("Hide")
+                    }
+                    else {
+                        password.setAttribute("type", "password");
+                        toggle.classList.remove("Hide")
+                    }
+                }
+            </script>
          </div>
      </section>
 </body>
