--- a/Glitch.html
+++ b/Glitch.html
@@ -7,11 +7,16 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="glitch.css">
     <style type="text/css"> 
-    a { 
-        font-size: 120%; 
-        font-family: Verdana, Arial, Helvetica, sans-serif; 
-        color: #ffffff;
-       }</style>
+        a { 
+            font-size: 120%; 
+            font-family: Verdana, Arial, Helvetica, sans-serif; 
+            color: #ffffff;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
     <section><p><a href="html ideas start.html">Назад</a></p></section>
