added new files

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -11,10 +11,16 @@
             <p><a href="Glitch.html">Glitch</a></p>
         </article>
         <article>
-            <p><a href="Flip_but.html">Flip Social Media Buttons</a></p>
+            <p><a href="Flip_but.html">Flip Social Media Buttons (don't work as should with SCSS)</a></p>
         </article>
         <article>
             <p><a href="Hide_pass.html">Show / hide password</a></p>
+        </article>
+        <article>
+            <p><a href="Water_but.html">Water button (don't work as it should with SCSS</a></p>
+        </article>
+        <article>
+            <p><a href="Run-num.html">Running numbers JS</a></p>
         </article>
     </section>
 </body>
