added image card hover

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -22,6 +22,9 @@
         <article>
             <p><a href="Run-num.html">Running numbers JS</a></p>
         </article>
+        <article>
+            <p><a href="Image-card_hover.html">Image card hover</a></p>
+        </article>
     </section>
 </body>
 </html>
