added 404 page and scroll

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -25,6 +25,12 @@
         <article>
             <p><a href="Image-card_hover.html">Image card hover</a></p>
         </article>
+        <article>
+            <p><a href="Scroll_progress.html">Scroll progress bar</a></p>
+        </article>
+        <article>
+            <p><a href="404_page.html">404 page</a></p>
+        </article>
     </section>
 </body>
 </html>
