New added types

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -31,6 +31,15 @@
         <article>
             <p><a href="404_page.html">404 page</a></p>
         </article>
+        <article>
+            <p><a href="CSS_mae.html">CSS3 Manipulation Animation Effects</a></p>
+        </article>
+        <article>
+            <p><a href="Tab_create.html">Tab creation</a></p>
+        </article>
+        <article>
+            <p><a href="Light_dark.html">Light Dark mode</a></p>
+        </article>
     </section>
 </body>
 </html>
