--- a/html ideas start.html
+++ b/html ideas start.html
@@ -5,7 +5,7 @@
     <title>Main</title>
     </head>
 <body>
-    <section>Интересные идеи почепнутые с разных видео</section>
+    <section>Интересные идеи почерпнутые с разных видео</section>
     <section>
         <article>
             <p><a href="Glitch.html">Glitch</a></p>
@@ -39,6 +39,12 @@
         </article>
         <article>
             <p><a href="Light_dark.html">Light Dark mode</a></p>
+        </article>
+        <article>
+            <p><a href="Menu_hover.html">Creative Menu Item Hover</a></p>
+        </article>
+        <article>
+            <p><a href="Button_neumorphism.html">Neumorphism Button Hover</a></p>
         </article>
     </section>
 </body>
