--- a/Button_neumorphism.html
+++ b/Button_neumorphism.html
@@ -19,7 +19,7 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav" title="Don't worl with dark theme">Назад</a>
+            <a href="html ideas start.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
