--- a/html ideas start.html
+++ b/html ideas start.html
@@ -17,7 +17,7 @@
             <p><a href="Hide_pass.html">Show / hide password</a></p>
         </article>
         <article>
-            <p><a href="Water_but.html">Water button (don't work as it should with SCSS</a></p>
+            <p><a href="Water_but.html">Water button (don't work as it should with SCSS)</a></p>
         </article>
         <article>
             <p><a href="Run-num.html">Running numbers JS</a></p>
@@ -48,6 +48,12 @@
         </article>
         <article>
             <p><a href="Product_card.html">Creative Product Card</a></p>
+        </article>
+        <article>
+            <p><a href="Video_fadeout.html">Fullscreen Video Background Fadeout On Scroll</a></p>
+        </article>
+        <article>
+            <p><a href="Product_card1.html">Incredibly Creative Product Card</a></p>
         </article>
     </section>
 </body>
