Added Card animation, yesterday's button and started work on calculator

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -55,6 +55,15 @@
         <article>
             <p><a href="Product_card1.html">Incredibly Creative Product Card</a></p>
         </article>
+        <article>
+            <p><a href="Radio_button_neumorphism.html">Neumorphism Radio Buttons</a></p>
+        </article>
+        <article>
+            <p><a href="Card_hover.html">Card Hover Effects</a></p>
+        </article>
+        <article>
+            <p><a href="Calculator.html">Calculator</a></p>
+        </article>
     </section>
 </body>
 </html>
