added wave animation for text + finished calculator

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -64,6 +64,9 @@
         <article>
             <p><a href="Calculator.html">Calculator</a></p>
         </article>
+        <article>
+            <p><a href="Wavy_text.html">Wavy Text Animation</a></p>
+        </article>
     </section>
 </body>
 </html>
