Added three new files

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -67,6 +67,18 @@
         <article>
             <p><a href="Wavy_text.html">Wavy Text Animation</a></p>
         </article>
+        <article>
+            <p><a href="CSS_ripple.html">CSS Ripple Animation</a></p>
+        </article>
+        <article>
+            <p><a href="Checkbox_glow.html">CSS Custom Checkbox</a></p>
+        </article>
+        <article>
+            <p><a href="Checkbox_glow1.html">CSS Custom Checkbox Button</a></p>
+        </article>
+        <article>
+            <p><a href="Wavy_back.html">Animated Waves using SVG</a></p>
+        </article>
     </section>
 </body>
 </html>
