--- a/Water_but.html
+++ b/Water_but.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Water button</title>
-    <link rel="stylesheet" type= "text/css" href="wat_but.css">
+    <link rel="stylesheet" type= "text/css" href="water_but.css">
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap" rel="stylesheet">
     <style type="text/css"> 
         a { 
