Animation with eyes + spotlight + checkbox dark/li

--- a/Light_dark.html
+++ b/Light_dark.html
@@ -13,13 +13,14 @@
             font-family: Verdana, Arial, Helvetica, sans-serif; 
             background: #fff;
             padding: 20px 20px;
+            z-index: 1;
         }
     </style>
 </head>
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav" title="Don't worl with dark theme">Назад</a>
+            <a href="html ideas start.html" class="Nav">Назад</a>
         </p>
     </section>
     <input type="checkbox" name="" id="">
