--- a/html ideas start.html
+++ b/html ideas start.html
@@ -79,6 +79,16 @@
         <article>
             <p><a href="Wavy_back.html">Animated Waves using SVG</a></p>
         </article>
+        <p>Coppied above to the folders of the portfolio</p>
+        <article>
+            <p><a href="Spotlight.html">Spotlight Effect on Mousemove</a></p>
+        </article>
+        <article>
+            <p><a href="Anieyes_follow.html">Animated Eyes Follow Mouse Cursor</a></p>
+        </article>
+        <article>
+            <p><a href="Checkbox_day_night.html">Checkbox day night</a></p>
+        </article>
     </section>
 </body>
 </html>
