--- a/html ideas start.html
+++ b/html ideas start.html
@@ -89,6 +89,9 @@
         <article>
             <p><a href="Checkbox_day_night.html">Checkbox day night</a></p>
         </article>
+        <article>
+            <p><a href="Image_hover_3D.html">3D Image Hover</a></p>
+        </article>
     </section>
 </body>
 </html>
