--- a/html ideas start.html
+++ b/html ideas start.html
@@ -92,6 +92,9 @@
         <article>
             <p><a href="Image_hover_3D.html">3D Image Hover</a></p>
         </article>
+        <article>
+            <p><a href="Ani_gradient_shadow.html">Stylish Animated Gradient Shadow</a></p>
+        </article>
     </section>
 </body>
 </html>
