--- a/html ideas start.html
+++ b/html ideas start.html
@@ -95,6 +95,15 @@
         <article>
             <p><a href="Ani_gradient_shadow.html">Stylish Animated Gradient Shadow</a></p>
         </article>
+        <article>
+            <p><a href="Hard_Edged_Gradient.html">Hard Edged Gradient</a></p>
+        </article>
+        <article>
+            <p><a href="Button_ripple_effect.html">Button Ripple Effect</a></p>
+        </article>
+        <article>
+            <p><a href="Sidebar_menu.html">Sidebar menu</a></p>
+        </article>
     </section>
 </body>
 </html>
