--- a/html ideas start.html
+++ b/html ideas start.html
@@ -104,6 +104,12 @@
         <article>
             <p><a href="Sidebar_menu.html">Sidebar menu</a></p>
         </article>
+        <article>
+            <p><a href="Responsive_glowing_card.html">Responsive Glowing Card (not working)</a></p>
+        </article>
+        <article>
+            <p><a href="Circular_progress_bar.html">Circular progress bar</a></p>
+        </article>
     </section>
 </body>
 </html>
