--- a/html ideas start.html
+++ b/html ideas start.html
@@ -110,6 +110,21 @@
         <article>
             <p><a href="Circular_progress_bar.html">Circular progress bar</a></p>
         </article>
+        <article>
+            <p><a href="Popoup_blur.html">Popup with blurred background</a></p>
+        </article>
+        <article>
+            <p><a href="Glowing_loader_ring.html">Glowing gradient loader ring</a></p>
+        </article>
+        <article>
+            <p><a href="Responsive_nav.html">Responsive navigation menu bar</a></p>
+        </article>
+        <article>
+            <p><a href="Video_capt_hover.html">Video Caption Hover</a></p>
+        </article>
+        <article>
+            <p><a href="Parallax_scroll.html">Parallax scrolling effect</a></p>
+        </article>
     </section>
 </body>
 </html>
