Added new files

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -125,6 +125,24 @@
         <article>
             <p><a href="Parallax_scroll.html">Parallax scrolling effect</a></p>
         </article>
+        <article>
+            <p><a href="Lang_change_toggle.html">Change language toggle</a></p>
+        </article>
+        <article>
+            <p><a href="Parallax_scroll_clip-mask.html">Text Clip-Mask Parallax Scrolling (not working with Firefox and Safari)</a></p>
+        </article>
+        <article>
+            <p><a href="Video_back.html">Video as FontAwesome Icon Background</a></p>
+        </article>
+        <article>
+            <p><a href="Position_sticky.html">Position Sticky</a></p>
+        </article>
+        <article>
+            <p><a href="Card_hover_neumorphism.html">Card Hover Effects Neumorphism</a></p>
+        </article>
+        <article>
+            <p><a href="Slider_fullscreen.html">Slider fullscreen</a></p>
+        </article>
     </section>
 </body>
 </html>
