--- a/html ideas start.html
+++ b/html ideas start.html
@@ -143,6 +143,9 @@
         <article>
             <p><a href="Slider_fullscreen.html">Slider fullscreen</a></p>
         </article>
+        <article>
+            <p><a href="Website.html">Responsive website</a></p>
+        </article>
     </section>
 </body>
 </html>
