Added files for 2 days

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -146,6 +146,48 @@
         <article>
             <p><a href="Website.html">Responsive website</a></p>
         </article>
+        <article>
+            <p><a href="Nav_menu_hover.html">Navigation Menu Hover</a></p>
+        </article>
+        <article>
+            <p><a href="Parallax_mousemove.html">2.5D Parallax Effects on Mousemove</a></p>
+        </article>
+        <article>
+            <p><a href="Clock_analog_neumorpism.html">Neumorphism Working Analog Clock</a></p>
+        </article>
+        <article>
+            <p><a href="Text_isometric.html">Isometric Text</a></p>
+        </article>
+        <article>
+            <p><a href="Position_sticky_scrolling.html">Position Sticky Scrolling</a></p>
+        </article>
+        <article>
+            <p><a href="Just_for_fun2.html">Just For Fun 2</a></p>
+        </article>
+        <article>
+            <p><a href="Clip-path_hover.html">Clip-Path Hover Effects</a></p>
+        </article>
+        <article>
+            <p><a href="Elastic_loader.html">Elastic Loader</a></p>
+        </article>
+        <article>
+            <p><a href="Card_hover_I.html">Card Hover</a></p>
+        </article>
+        <article>
+            <p><a href="Heart.html">Append On Mousemove | Javascript</a></p>
+        </article>
+        <article>
+            <p><a href="Image_hover.html">Image Hover Effects</a></p>
+        </article>
+        <article>
+            <p><a href="Just_for_fun.html">Just For Fun | Brick Fall</a></p>
+        </article>
+        <article>
+            <p><a href="Gooey.html">Gooey</a></p>
+        </article>
+        <article>
+            <p><a href="Button_neon_light.html">Neon Light Button</a></p>
+        </article>
     </section>
 </body>
 </html>
