login page + loading + wavy

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -188,6 +188,15 @@
         <article>
             <p><a href="Button_neon_light.html">Neon Light Button</a></p>
         </article>
+        <article>
+            <p><a href="Page_loading_glowing.html">Glowing Loading Page</a></p>
+        </article>
+        <article>
+            <p><a href="Login_dark_neumorphism.html">Dark Neumorphism Login Form</a></p>
+        </article>
+        <article>
+            <p><a href="Div_wavy.html">Wavy Div</a></p>
+        </article>
     </section>
 </body>
 </html>
