added new three ideas

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -197,6 +197,15 @@
         <article>
             <p><a href="Div_wavy.html">Wavy Div</a></p>
         </article>
+        <article>
+            <p><a href="Video_popup.html">Video Popup on Click</a></p>
+        </article>
+        <article>
+            <p><a href="Icon_Glowing_neumorphism.html">Glowing Neumorphism Icon</a></p>
+        </article>
+        <article>
+            <p><a href="Clip-path_transform1.html">Clip-path Transform Effects on Scroll</a></p>
+        </article>
     </section>
 </body>
 </html>
