Added three days work

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -206,6 +206,30 @@
         <article>
             <p><a href="Clip-path_transform1.html">Clip-path Transform Effects on Scroll</a></p>
         </article>
+        <article>
+            <p><a href="Menu_hover_text.html">Text Typing Menu Item</a></p>
+        </article>
+        <article>
+            <p><a href="Product_card2.html">Product Card Border</a></p>
+        </article>
+        <article>
+            <p><a href="Clip-path_transform2.html">Clip-path Transform Effects on Scroll</a></p>
+        </article>
+        <article>
+            <p><a href="Website_movie.html">Movie Landing Page</a></p>
+        </article>
+        <article>
+            <p><a href="Swiper_card_slider.html">Swiper Card Slider</a></p>
+        </article>
+        <article>
+            <p><a href="Parallax_scroll1.html">Parallax scrolling effect(don't work as it should with SCSS)</a></p>
+        </article>
+        <article>
+            <p><a href="Website_contact_form.html">Contact Form</a></p>
+        </article>
+        <article>
+            <p><a href="One_page_slider.html">One page slider</a></p>
+        </article>
     </section>
 </body>
 </html>
