--- a/html ideas start.html
+++ b/html ideas start.html
@@ -230,6 +230,27 @@
         <article>
             <p><a href="One_page_slider.html">One page slider</a></p>
         </article>
+        <article>
+            <p><a href="Anim_hover.html">CSS Animation & Hover</a></p>
+        </article>
+        <article>
+            <p><a href="Pacman.html">Pacman</a></p>
+        </article>
+        <article>
+            <p><a href="Cloud_banner.html">Cloud banner</a></p>
+        </article>
+        <article>
+            <p><a href="Card_spin.html">Card Spin</a></p>
+        </article>
+        <article>
+            <p><a href="Animated_gradient_buttons.html">Animated Gradient Buttons</a></p>
+        </article>
+        <article>
+            <p><a href="Animated_preloader.html">Animated Preloader</a></p>
+        </article>
+        <article>
+            <p><a href="Animated_progress_bar.html">Animated Progress Bar</a></p>
+        </article>
     </section>
 </body>
 </html>
