added new JS anim

--- a/html ideas start.html
+++ b/html ideas start.html
@@ -254,6 +254,21 @@
         <article>
             <p><a href="Isometric_social_media_icon.html">Isometric Social Media Icon</a></p>
         </article>
+        <article>
+            <p><a href="Click_hold.html">Click And Hold</a></p>
+        </article>
+        <article>
+            <p><a href="Slider_range.html">Range Slider</a></p>
+        </article>
+        <article>
+            <p><a href="Background_anim.html">3D Background Animation</a></p>
+        </article>
+        <article>
+            <p><a href="3D_video_cube.html">3D Video Cube</a></p>
+        </article>
+        <article>
+            <p><a href="Counter_preloader.html">Counter Preloader</a></p>
+        </article>
     </section>
 </body>
 </html>
