--- a/portfolio/html/3D_video_cube.html
+++ b/portfolio/html/3D_video_cube.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Video Cube</title>
-    <link rel="stylesheet" type="text/css" href="3D_video_cube.css">
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/3D_video_cube.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
@@ -21,17 +21,17 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
         <section>
-            <video src="3D_video_cube_trailer.mp4" autoplay="" muted="" loop=""></video>
+            <video src="/portfolio/add/3D_video_cube_trailer.mp4" autoplay="" muted="" loop=""></video>
             <div class="box">
                 <div>
-                    <span><video src="3D_video_cube_trailer.mp4" autoplay="" muted="" loop=""></video></span>
-                    <span><video src="3D_video_cube_trailer.mp4" autoplay="" muted="" loop=""></video></span>
-                    <span><video src="3D_video_cube_trailer.mp4" autoplay="" muted="" loop=""></video></span>
+                    <span><video src="/portfolio/add/3D_video_cube_trailer.mp4" autoplay="" muted="" loop=""></video></span>
+                    <span><video src="/portfolio/add/3D_video_cube_trailer.mp4" autoplay="" muted="" loop=""></video></span>
+                    <span><video src="/portfolio/add/3D_video_cube_trailer.mp4" autoplay="" muted="" loop=""></video></span>
                 </div>
             </div>
         </section>
