--- a/portfolio/html/Card_hover_neumorphism.html
+++ b/portfolio/html/Card_hover_neumorphism.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card hover neumorphism</title>
-    <link rel="stylesheet" type="text/css" href="Card_hover_neumorphism.css">
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Card_hover_neumorphism.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
@@ -19,14 +19,14 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
         <div class="container">
             <div class="card">
                 <div class="imgBx">
-                    <img src="Card_hover_neumorphism_1.png">
+                    <img src="/portfolio/add/Card_hover_neumorphism_1.png">
                 </div>
                 <div class="contentBx">
                     <h2>Design</h2>
@@ -36,7 +36,7 @@
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="Card_hover_neumorphism_2.png">
+                    <img src="/portfolio/add/Card_hover_neumorphism_2.png">
                 </div>
                 <div class="contentBx">
                     <h2>Code</h2>
@@ -46,7 +46,7 @@
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="Card_hover_neumorphism_3.png">
+                    <img src="/portfolio/add/Card_hover_neumorphism_3.png">
                 </div>
                 <div class="contentBx">
                     <h2>Launch</h2>
