--- a/portfolio/html/Checkbox_day_night.html
+++ b/portfolio/html/Checkbox_day_night.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Preloader</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="Animated_preloader.css">
+    <title>Checkbox day night</title>
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Checkbox_day_night.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
             display: flex;
-            right: 20px;
             font-size: 120%; 
             font-family: Verdana, Arial, Helvetica, sans-serif; 
             background: #fff;
@@ -22,11 +20,14 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
-        <h1>Loading...</h1>
+        <label>
+            <input type="checkbox">
+            <span class="check"></span>
+        </label>
     </section>
 </body>
 </html>
