--- a/portfolio/html/Cloud_banner.html
+++ b/portfolio/html/Cloud_banner.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloud banner</title>
-    <link rel="stylesheet" type="text/css" href="Cloud_banner.css">
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Cloud_banner.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
@@ -21,17 +21,17 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
         <div class="banner">
             <div class="clouds">
-                <img src="Cloud_banner_cloud1.png" style="--i:1;">
-                <img src="Cloud_banner_cloud2.png" style="--i:2;">
-                <img src="Cloud_banner_cloud3.png" style="--i:3;">
-                <img src="Cloud_banner_cloud4.png" style="--i:4;">
-                <img src="Cloud_banner_cloud5.png" style="--i:5;">
+                <img src="/portfolio/add/Cloud_banner_cloud1.png" style="--i:1;">
+                <img src="/portfolio/add/Cloud_banner_cloud2.png" style="--i:2;">
+                <img src="/portfolio/add/Cloud_banner_cloud3.png" style="--i:3;">
+                <img src="/portfolio/add/Cloud_banner_cloud4.png" style="--i:4;">
+                <img src="/portfolio/add/Cloud_banner_cloud5.png" style="--i:5;">
             </div>
         </div>
         <section>
