--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -284,6 +284,188 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
+						<h3>3D Video Cube</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/3D_video_cube.html">Click here</a>
+					</div>
+				  </div>
+				<div class="card">
+					<div class="box">
+						<h3>Stylish Animated Gradient Shadow</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Ani_gradient_shadow.html">Click here</a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="box">
+						<h3>Animated Eyes Follow Mouse Cursor</h3>
+					   <img src="add/Anieyes_follow.png" alt="Corona"/>
+					   <a href="html/Anieyes_follow.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>CSS Animation & Hover</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Anim_hover.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Animated Gradient Buttons</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Animated_gradient_buttons.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Animated Preloader</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Animated_preloader.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Animated Progress Bar</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Animated_progress_bar.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>3D Background Animation</h3>
+					   <img src="add/Background_anim_check.jpg" alt="Background animation"/>
+					   <a href="html/Background_anim.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Neon Light Button</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Button_neon_light.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Button Ripple Direction</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Button_ripple_direction.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Button Ripple Effect</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Button_ripple_effect.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Card Hover</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Card_hover_I.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Card hover neumorphism</h3>
+					   <img src="add/Card_hover_neumorphism_2.png" alt="Card hover neumorphism"/>
+					   <a href="html/Card_hover_neumorphism.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Card Spin</h3>
+					   <img src="https://images.pexels.com/photos/257360/pexels-photo-257360.jpeg?auto+compress&cs=tinysrgb&dpr=2&h=750&w1260" alt="404"/>
+					   <a href="html/Card_spin.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Checkbox day night</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Checkbox_day_night.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Circular progress bar</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Circular_progress_bar.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Click And Hold</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Click_hold.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Clip-Path Hover Effects</h3>
+					   <img src="add/Clip-path_hover_img1.jpg" alt="Clip-path hover"/>
+					   <a href="html/Clip-path_hover.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Clip-path Transform Effects on Scroll</h3>
+					   <img src="add/Clip-path_transform1_bg.jpg" alt="Clip-path transform1"/>
+					   <a href="html/Clip-path_transform1.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Clip-path Transform Effects on Scroll</h3>
+					   <img src="add/Clip-path_transform2_bg.jpg" alt="Clip-path transform2"/>
+					   <a href="html/Clip-path_transform2.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Neumorphism Working Analog Clock</h3>
+					   <img src="add/Clock_analog_neumorpism_clock.png" alt="Clock analog neumorpism clock"/>
+					   <a href="html/Clock_analog_neumorpism.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Cloud banner</h3>
+					   <img src="add/Cloud_banner_bg.jpg" alt="Cloud banner"/>
+					   <a href="html/Cloud_banner.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Counter Preloader</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Counter_preloader.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
 						<h3>Portfolio Title Here</h3>
 					   <img src="add/p404.png" alt="404"/>
 					   <a href="html/404_page.html">Click here</a>
