--- a/portfolio/html/Ani_gradient_shadow.html
+++ b/portfolio/html/Ani_gradient_shadow.html
@@ -3,34 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Background Animation</title>
-    <link rel="stylesheet" type="text/css" href="Background_anim.css">
+    <title>Stylish Animated Gradient Shadow</title>
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Ani_gradient_shadow.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
             display: flex;
-            right: 20px;
             font-size: 120%; 
             font-family: Verdana, Arial, Helvetica, sans-serif; 
             background: #fff;
             padding: 20px 20px;
-            z-index: 30;
+            z-index: 1;
         }
     </style>
 </head>
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
-        <section>
-            <div class="pattern">
-                <div class="face face1"></div>
-                <div class="face face2"></div>
-            </div>
-        </section>
+        <div class="shadow">
+            <img src="https://i.ibb.co/tB9tzzr/logo-2.png" alt="logo">
+        </div>
     </section>
 </body>
 </html>
