--- a/portfolio/html/Anim_hover.html
+++ b/portfolio/html/Anim_hover.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Gradient Buttons</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="Animated_gradient_buttons.css">
+    <title>CSS Animation & Hover</title>
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Anim_hover.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
@@ -22,15 +21,15 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
-        <div class="container">
-            <button class="btn btn-1">Gradient button</button>
-            <button class="btn btn-2">Gradient button</button>
-            <button class="btn btn-3">Gradient button</button>
-            <button class="btn btn-4">Gradient button</button>
+        <div class="loader">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </section>
 </body>
