--- a/portfolio/html/Animated_preloader.html
+++ b/portfolio/html/Animated_preloader.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clip-path Transform Effects on Scroll</title>
-    <link rel="stylesheet" type="text/css" href="Clip-path_transform2.css">
+    <title>Animated Preloader</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Animated_preloader.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
@@ -21,20 +22,11 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
-        <section>
-            <span class="skewed"></span>
-        </section>
+        <h1>Loading...</h1>
     </section>
-    <script type="text/javascript">
-        let skewed = document.querySelector('.skewed');
-        window.addEventListener('scroll', function(){
-            let value = -10 + window.scrollY/60;
-            skewed.style.transform = "skewY("+ value +"deg)";
-        })
-    </script>
 </body>
 </html>
