--- a/portfolio/html/Card_spin.html
+++ b/portfolio/html/Card_spin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Spin</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="Card_spin.css">
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Card_spin.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
@@ -22,7 +22,7 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
