--- a/portfolio/html/Clip-path_hover.html
+++ b/portfolio/html/Clip-path_hover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clip-Path Hover Effects</title>
-    <link rel="stylesheet" type="text/css" href="Clip-path_hover.css">
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Clip-path_hover.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
@@ -21,14 +21,14 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
         <div class="container">
 			<div class="box">
 				<div class="imgBx">
-					<img src="Clip-path_hover_img1.jpg">
+					<img src="/portfolio/add/Clip-path_hover_img1.jpg">
 				</div>
 				<div class="content">
 					<h2>Title</h2>
@@ -39,7 +39,7 @@
 			</div>
 			<div class="box">
 				<div class="imgBx">
-					<img src="Clip-path_hover_img2.jpg">
+					<img src="/portfolio/add/Clip-path_hover_img2.jpg">
 				</div>
 				<div class="content">
 					<h2>Title</h2>
@@ -50,7 +50,7 @@
 			</div>
 			<div class="box">
 				<div class="imgBx">
-					<img src="Clip-path_hover_img3.jpg">
+					<img src="/portfolio/add/Clip-path_hover_img3.jpg">
 				</div>
 				<div class="content">
 					<h2>Title</h2>
@@ -61,7 +61,7 @@
 			</div>
 			<div class="box">
 				<div class="imgBx">
-					<img src="Clip-path_hover_img4.jpg">
+					<img src="/portfolio/add/Clip-path_hover_img4.jpg">
 				</div>
 				<div class="content">
 					<h2>Title</h2>
