--- a/portfolio/html/Clip-path_transform1.html
+++ b/portfolio/html/Clip-path_transform1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clip-path Transform Effects on Scroll</title>
-    <link rel="stylesheet" type="text/css" href="Clip-path_transform1.css">
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Clip-path_transform1.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
@@ -21,7 +21,7 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
