--- a/portfolio/html/Clip-path_transform2.html
+++ b/portfolio/html/Clip-path_transform2.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Animation & Hover</title>
-    <link rel="stylesheet" type="text/css" href="Anim_hover.css">
+    <title>Clip-path Transform Effects on Scroll</title>
+    <link rel="stylesheet" type="text/css" href="/portfolio/css/Clip-path_transform2.css">
     <style type="text/css"> 
         .Nav {
             position: absolute; 
@@ -21,16 +21,20 @@
 <body>
     <section>
         <p>
-            <a href="html ideas start.html" class="Nav">Назад</a>
+            <a href="/portfolio/index.html" class="Nav">Назад</a>
         </p>
     </section>
     <section class="Main">
-        <div class="loader">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+        <section>
+            <span class="skewed"></span>
+        </section>
     </section>
+    <script type="text/javascript">
+        let skewed = document.querySelector('.skewed');
+        window.addEventListener('scroll', function(){
+            let value = -10 + window.scrollY/60;
+            skewed.style.transform = "skewY("+ value +"deg)";
+        })
+    </script>
 </body>
 </html>
