--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -739,16 +739,16 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
+						<h3>Animation Play State</h3>
 					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+					   <a href="html/Anim_play_state.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+						<h3>Fitness Gym Website</h3>
+					   <img src="add/Website_fitness_man.png" alt="Website fitness"/>
+					   <a href="html/Website_fitness.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
